Updating deps, wlp etc